Prevent Widget Title From Disappearing In Edit Modal If Title Causes Wrap

--- a/css/admin.less
+++ b/css/admin.less
@@ -986,9 +986,10 @@
 
 		h3.so-title {
 			.box-sizing( border-box );
-			margin: 0 150px 0 -3px;
-			padding: @pane_padding;
-			display: inline-block;
+			box-sizing: border-box;
+			display: block;
+			margin: 0 150px 0 50px;
+			padding: 15px;
 
 			&.so-title-editable {
 				&:hover,
